new: tests 50%, and now you can compile project to jar